...
                .padding(.bottom, 24)

            Spacer(minLength: 220)
        }
        .navigationBarBackButtonHidden(true)
        .toolbar(.hidden, for: .navigationBar)
        .accessibilityIdentifier("dietary_preferences_intro_view")
        .onAppear {
            coordinator.setCanvasRoute(.dietaryPreferencesAndRestrictions(isFamilyFlow: isFamilyFlow))
        }
    }
}

...

//            Spacer()

            Button {
                letsGoPressed()
            } label: {
                GreenCapsule(title: "Let's Go!", takeFullWidth: false)
            }
            .padding(.top, isFamilyFlow ? 8 : 32)
            .accessibilityIdentifier("dietary_preferences_lets_go_button")
        }
        .padding(.vertical, isFamilyFlow ? 16 : 32)
        .padding(.horizontal, 20)
...
