...
        let dietCoke = DTO.Scan(
            id: "scan-diet-coke",
            scan_type: "barcode",
            barcode: "049000028911",
            state: "done",
            product_info: DTO.ScanProductInfo(
                name: "Diet Coke Soft Drink",
                brand: "Coca-Cola",
                ingredients: [
                    DTO.Ingredient(name: "Carbonated Water", vegan: true, vegetarian: true, ingredients: []),
                    DTO.Ingredient(name: "Aspartame", vegan: true, vegetarian: true, ingredients: [])
                ],
                images: [],
...
        let oreo = DTO.Scan(
            id: "scan-oreo",
            scan_type: "barcode",
            barcode: "044000032547",
            state: "done",
            product_info: DTO.ScanProductInfo(
                name: "Oreo Original",
                brand: "Oreo",
                ingredients: [
                    DTO.Ingredient(name: "Sugar", vegan: true, vegetarian: true, ingredients: []),
                    DTO.Ingredient(name: "Wheat Flour", vegan: true, vegetarian: true, ingredients: [])
                ],
                images: [],
...
